--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+  display: none;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: "#c0d1fc";
+  --foreground: #d9d9d9;
+  --textcolour: "#545454";
+  --progressbar: "#C48787";
+  --bordercolour: "#7C3023";
+  --font-coda-caption: "CodaCaption", sans-serif;
+  --font-geist-mono: "GeistMono", sans-serif;
+  --font-geist: "Geist", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -12,6 +23,27 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+}
+
+@font-face {
+  font-family: "CodaCaption";
+  src: url("/fonts/CodaCaption-Heavy.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GeistMono";
+  src: url("/fonts/GeistMonoVF.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Geist";
+  src: url("/fonts/GeistVF.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
 }
 
 body {
